2016-04-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Format ! like everywhere else.

2016-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/xslt_i18n.c (xslt_ext_strformat): Free members of format_args too.

2016-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	Close some leaks found with valgrind.

	* src/gsad_omp.c (get_many): Free filter_type if it is not added to
	last_filt_ids.

	* src/xslt_i18n.c (xslt_ext_strformat): Free data.
	(init_language_lists): Free columns.

2016-04-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (generate_page): Correct condition of current_page
	UTF-8 check and set current_page to NULL if it fails.

2016-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (send_redirect_to_uri, file_content_response)
	(request_handler): Let MHD use the GSA buffer when creating responses,
	to reduce the maximum amount of memory used.

2016-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.1+beta5.

2016-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.1+beta4 release.

	* CHANGES: Updated.

2016-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Add CMAKE_BINARY_DIR to CPACK_SOURCE_IGNORE_FILES to
	generally ignore files created in out-of-source builds.

2016-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (xsl_transform_omp): Free xml earlier, to reduce max
	memory requirement.

2016-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_base.c (xsl_transform_with_stylesheet): Free doc earlier, to
	reduce the amount of memory allocated at once.  Call malloc_trim after
	freeing everything, to force Glib to check if it can reduce the heap size.

2016-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove 'cmake$' from CPACK_SOURCE_IGNORE_FILES to